Updated search page visuals

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/music.svg" />
+    <link rel="icon" type="image/svg+xml" href="public/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Create, customize, and share your ultimate music rankings" />
-    <meta name="theme-color" content="#9333EA" />
+    <meta name="theme-color" content="#C084FC" />
     <title>Rankify</title>
   </head>
   <body>
